fix alignment

--- a/src/components/game/Game.scss
+++ b/src/components/game/Game.scss
@@ -1,13 +1,19 @@
 @import '../../styles/styles.scss';
+html,
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
 .gameBackground {
   background-color: #0d1a20;
 }
 .game {
-  color: black;
+  display: grid;
+  grid-template-rows: 100vh;
+  grid-template-columns: 100vw;
 }
 .canvas {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  justify-self: center;
+  align-self: center;
 }
